Add Express server to keep app running on Render

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "my-http-function",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
